name:                idoor
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.8

executable idoor
  main-is:             app.hs
  -- other-modules:       
  build-depends:     base ==4.6.0.1,
                     resourcet ==0.4.10,
                     text ==1.0.0.0,
                     bytestring ==0.10.4.0,
                     transformers ==0.3.0.0,
                     scotty ==0.6.2,
                     persistent ==1.3.0,
                     persistent-sqlite ==1.3.0,
                     persistent-template ==1.3.0,
                     monad-logger ==0.3.4.0,
                     -- Note: requires my modified version of MissingH, or potentially a newer version of MissingH
                     MissingH ==1.2.0.2
